tests/baselines/reference/unknownTypeErrors.errors.txt
unknownTypeErrors.ts(1,10): error TS2304: Cannot find name 'Unknown'.


==== unknownTypeErrors.ts (1 errors) ====
    var foo: Unknown = 0;
             ~~~~~~~
!!! error TS2304: Cannot find name 'Unknown'.